# llamasniffer-sdk

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  INTEGRATION.md  LICENSE  MANIFEST.in  README.md  README_SDK.md  REFACTORING_SUMMARY.md  RESTRUCTURE_PLAN.md  TASK_QUEUE_REDESIGN.md  llamasniffer_sdk.py  pyproject.toml
config_examples/: coding_instructions.yaml  customer_support.json  quick_demo.yaml  reasoning_demo.yaml  reasoning_math.yaml  reasoning_structured.yaml  science_qa.yaml
llamasniffer/: __init__.py  _version.py  core.py  dataset_cli.py  dataset_forge.py  endpoint_cache.py  hf_uploader.py  ollama.py  quality_control.py  schema_compiler.py  tasks.py
tests/: __init__.py  conftest.py  test_dataset_cli.py  test_dataset_forge.py  test_distributed.py  test_endpoint_cache.py  test_schema_compiler.py  test_semantic.py  test_task_queue.py
