[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llamasniffer"
version = "0.4.0"
description = "Distributed Semantic Routing for Ollama — Global Model Discovery and Inference Coordination"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Latticeworks1", email = "dev@latticeworks1.com"},
]
keywords = ["ollama", "llm", "ai", "distributed-inference", "semantic-routing", "inference-mesh", "distributed-ai", "global-discovery", "flock-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "shodan>=1.31.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.17.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/Latticeworks1/llamasniffer-sdk"
Repository = "https://github.com/Latticeworks1/llamasniffer-sdk"
Issues = "https://github.com/Latticeworks1/llamasniffer-sdk/issues"
Documentation = "https://github.com/Latticeworks1/llamasniffer-sdk#readme"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
llamasniffer = "llamasniffer.core:main"

[tool.hatch.build.targets.wheel]
packages = ["llamasniffer"]

[tool.hatch.version]
path = "llamasniffer/_version.py"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=llamasniffer --cov-report=html --cov-report=term-missing"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
select = ["E", "W", "F", "C"]
max-complexity = 10
per-file-ignores = "__init__.py:F401"